syntax = "proto3";
option java_multiple_files = true;
option java_package = "org.wso2.micro.gateway.tests.grpc.gen";

message TestRequest {
    string testReqString = 1;
}

message TestResponse {
    string testResString = 1;
}

service TestService {
    rpc testCall(TestRequest) returns (TestResponse);
}

service JwtAuthTestService {
    rpc testCall(TestRequest) returns (TestResponse);

    rpc testCallWithScopes(TestRequest) returns (TestResponse);
}

service ThrottlingTestService {
    rpc testCallServiceThrottling(TestRequest) returns (TestResponse);

    rpc testCallMethodThrottling(TestRequest) returns (TestResponse);
}